--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,9 @@
       <span class="user-nav__num">4</span>
      </a>
     </div>
+    <div class="menu__burger">
+     <span class="menu__burger-line"></span>
+    </div>
    </div>
   </div>
  </header>
@@ -359,7 +362,7 @@
    </div>
   </section>
 
-  <section class="testimonials">
+  <!-- <section class="testimonials">
    <div class="container">
     <h2 class="testimonials__title title">
      Отзывы клиентов
@@ -399,7 +402,7 @@
      </div>
     </div>
    </div>
-  </section>
+  </section> -->
 
   <section class="app">
    <div class="container">
