--- a/app/index.html
+++ b/app/index.html
@@ -9,9 +9,9 @@
  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
  <link rel="manifest" href="site.webmanifest">
- <title>Simplefood</title>
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+ <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
  <link rel="stylesheet" href="css/style.min.css">
+ <title>Simplefood</title>
 </head>
 
 <body>
@@ -362,7 +362,7 @@
    </div>
   </section>
 
-  <!-- <section class="testimonials">
+  <section class="testimonials">
    <div class="container">
     <h2 class="testimonials__title title">
      Отзывы клиентов
@@ -402,7 +402,7 @@
      </div>
     </div>
    </div>
-  </section> -->
+  </section>
 
   <section class="app">
    <div class="container">
@@ -546,10 +546,12 @@
   </div>
  </footer>
 
- 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js" integrity="sha512-WNZwVebQjhSxEzwbettGuQgWxbpYdoLf7mH+25A7sfQbbxKeS5SQ9QBf97zOY4nOlwtksgDA/czSTmfj4DUEiQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
- <script src="js/main.min.js"></script>
+
+
+ <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+ 
+ <script src="js/main.js"></script>
 </body>
 
 </html>
