fix catalog page

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -328,7 +328,7 @@
      <div class="pagination">
       <ul class="pagination__list">
        <li class="pagination__item">
-        <span></span>
+        <span class="pagination__arrow-prev"></span>
        </li>
        <li class="pagination__item">
         <a class="pagination__link">
@@ -356,7 +356,7 @@
         </a>
        </li>
        <li class="pagination__item">
-        <a class="pagination__link"></a>
+        <a class="pagination__arrow-next"></a>
        </li>
       </ul>
      </div>
