adaptive catalog page

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -191,7 +191,7 @@
         В корзину
        </button>
       </div>
-      <div class="popular__card">
+      <div class="popular__card ">
        <img class="popular__card-image" src="images/menu/bifburger.png" alt="#">
        <h4 class="popular__card-title">
         Бифбургер
@@ -251,7 +251,7 @@
         В корзину
        </button>
       </div>
-      <div class="popular__card">
+      <div class="popular__card popular__card-catalog">
        <img class="popular__card-image" src="images/menu/bifburger.png" alt="#">
        <h4 class="popular__card-title">
         Бифбургер
@@ -263,7 +263,7 @@
         В корзину
        </button>
       </div>
-      <div class="popular__card">
+      <div class="popular__card popular__card-catalog">
        <img class="popular__card-image" src="images/menu/chiken-burger.png" alt="#">
        <h4 class="popular__card-title">
         Чикен бургер
@@ -275,7 +275,7 @@
         В корзину
        </button>
       </div>
-      <div class="popular__card">
+      <div class="popular__card popular__card-catalog">
        <img class="popular__card-image" src="images/menu/royal-cheeseburger.png" alt="#">
        <h4 class="popular__card-title">
         Королевский чизбургер
@@ -287,7 +287,7 @@
         В корзину
        </button>
       </div>
-      <div class="popular__card">
+      <div class="popular__card popular__card-catalog">
        <img class="popular__card-image" src="images/menu/black-burger.png" alt="#">
        <h4 class="popular__card-title">
         Черный гамбургер
@@ -299,7 +299,7 @@
         В корзину
        </button>
       </div>
-      <div class="popular__card">
+      <div class="popular__card popular__card-catalog">
        <img class="popular__card-image" src="images/menu/black-burger.png" alt="#">
        <h4 class="popular__card-title">
         Черный гамбургер
@@ -311,7 +311,7 @@
         В корзину
        </button>
       </div>
-      <div class="popular__card">
+      <div class="popular__card popular__card-catalog">
        <img class="popular__card-image" src="images/menu/black-burger.png" alt="#">
        <h4 class="popular__card-title">
         Черный гамбургер
@@ -364,49 +364,10 @@
    </div>
   </section>
 
-  <!-- <section class="popular">
-   <div class="container">
-    <h2 class="popular__title title">
-     Популярные категории
-    </h2>
-    <ul class="popular__filters">
-     <li class="popular__filter popular__filter--active popular__filter--burgers">
-      <button class="popular__btn popular__btn--active" type="button">
-       Бургеры
-      </button>
-     </li>
-     <li class="popular__filter popular__filter--pizza">
-      <button class="popular__btn" type="button">
-       Пицца
-      </button>
-     </li>
-     <li class="popular__filter popular__filter--sandwich">
-      <button class="popular__btn" type="button">
-       Сендвичи
-      </button>
-     </li>
-     <li class="popular__filter popular__filter--asia">
-      <button class="popular__btn" type="button">
-       Азиатская кухня
-      </button>
-     </li>
-     <li class="popular__filter popular__filter--sets">
-      <button class="popular__btn" type="button">
-       Cеты
-      </button>
-     </li>
-    </ul>
-    
-    <div class="popular__box-link">
-     <a class="popular__link" href="#">
-      Показать еще
-     </a>
-    </div>
-   </div>
-  </section> -->
+  
 
 
-  <section class="app">
+  <!-- <section class="app">
    <div class="container">
     <div class="app__inner">
      <div class="app__box">
@@ -574,7 +535,7 @@
     </p>
    </div>
   </div>
- </footer>
+ </footer> -->
 
  
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
