adaptive catalog page

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -82,6 +82,9 @@
      <h2 class="catalog__title title">
       Каталог продуктов
      </h2>
+     <button class="catalog__filters-btn">
+      <img class="catalog__filters-image" src="images/icons/filters-btn.svg" alt="#">
+     </button>
      <div class="catalog__selects">
       <select class="catalog__selects-name">
        <option value="">По названию</option>
@@ -178,148 +181,148 @@
        </div>
       </div>
      </div>
-     <div class="popular__menu">
-      <div class="popular__card">
-       <img class="popular__card-image" src="images/menu/сheeseburger.png" alt="#">
-       <h4 class="popular__card-title">
+     <div class="catalog__menu">
+      <div class="catalog__menu-card">
+       <img class="catalog__menu-image" src="images/menu/сheeseburger.png" alt="#">
+       <h4 class="catalog__menu-title">
         Чизбургер с листьями салата
        </h4>
-       <span class="popular__card-price">
+       <span class="catalog__menu-price">
         160 руб.
        </span>
-       <button class="popular__card-btn" type="button">
+       <button class="catalog__menu-btn" type="button">
         В корзину
        </button>
       </div>
-      <div class="popular__card ">
-       <img class="popular__card-image" src="images/menu/bifburger.png" alt="#">
-       <h4 class="popular__card-title">
+      <div class="catalog__menu-card">
+       <img class="catalog__menu-image" src="images/menu/bifburger.png" alt="#">
+       <h4 class="catalog__menu-title">
         Бифбургер
        </h4>
-       <span class="popular__card-price">
+       <span class="catalog__menu-price">
         190 руб.
        </span>
-       <button class="popular__card-btn" type="button">
+       <button class="catalog__menu-btn" type="button">
         В корзину
        </button>
       </div>
-      <div class="popular__card">
-       <img class="popular__card-image" src="images/menu/chiken-burger.png" alt="#">
-       <h4 class="popular__card-title">
+      <div class="catalog__menu-card">
+       <img class="catalog__menu-image" src="images/menu/chiken-burger.png" alt="#">
+       <h4 class="catalog__menu-title">
         Чикен бургер
        </h4>
-       <span class="popular__card-price">
+       <span class="catalog__menu-price">
         180 руб.
        </span>
-       <button class="popular__card-btn" type="button">
+       <button class="catalog__menu-btn" type="button">
         В корзину
        </button>
       </div>
-      <div class="popular__card">
-       <img class="popular__card-image" src="images/menu/royal-cheeseburger.png" alt="#">
-       <h4 class="popular__card-title">
+      <div class="catalog__menu-card">
+       <img class="catalog__menu-image" src="images/menu/royal-cheeseburger.png" alt="#">
+       <h4 class="catalog__menu-title">
         Королевский чизбургер
        </h4>
-       <span class="popular__card-price">
+       <span class="catalog__menu-price">
         260 руб.
        </span>
-       <button class="popular__card-btn" type="button">
+       <button class="catalog__menu-btn" type="button">
         В корзину
        </button>
       </div>
-      <div class="popular__card">
-       <img class="popular__card-image" src="images/menu/black-burger.png" alt="#">
-       <h4 class="popular__card-title">
+      <div class="catalog__menu-card">
+       <img class="catalog__menu-image" src="images/menu/black-burger.png" alt="#">
+       <h4 class="catalog__menu-title">
         Черный гамбургер
        </h4>
-       <span class="popular__card-price">
+       <span class="catalog__menu-price">
         199 руб.
        </span>
-       <button class="popular__card-btn" type="button">
+       <button class="catalog__menu-btn" type="button">
         В корзину
        </button>
       </div>
-      <div class="popular__card">
-       <img class="popular__card-image" src="images/menu/сheeseburger.png" alt="#">
-       <h4 class="popular__card-title">
+      <div class="catalog__menu-card">
+       <img class="catalog__menu-image" src="images/menu/сheeseburger.png" alt="#">
+       <h4 class="catalog__menu-title">
         Чизбургер с листьями салата
        </h4>
-       <span class="popular__card-price">
+       <span class="catalog__menu-price">
         160 руб.
        </span>
-       <button class="popular__card-btn" type="button">
+       <button class="catalog__menu-btn" type="button">
         В корзину
        </button>
       </div>
-      <div class="popular__card popular__card-catalog">
-       <img class="popular__card-image" src="images/menu/bifburger.png" alt="#">
-       <h4 class="popular__card-title">
+      <div class="catalog__menu-card">
+       <img class="catalog__menu-image" src="images/menu/bifburger.png" alt="#">
+       <h4 class="catalog__menu-title">
         Бифбургер
        </h4>
-       <span class="popular__card-price">
+       <span class="catalog__menu-price">
         190 руб.
        </span>
-       <button class="popular__card-btn" type="button">
+       <button class="catalog__menu-btn" type="button">
         В корзину
        </button>
       </div>
-      <div class="popular__card popular__card-catalog">
-       <img class="popular__card-image" src="images/menu/chiken-burger.png" alt="#">
-       <h4 class="popular__card-title">
+      <div class="catalog__menu-card">
+       <img class="catalog__menu-image" src="images/menu/chiken-burger.png" alt="#">
+       <h4 class="catalog__menu-title">
         Чикен бургер
        </h4>
-       <span class="popular__card-price">
+       <span class="catalog__menu-price">
         180 руб.
        </span>
-       <button class="popular__card-btn" type="button">
+       <button class="catalog__menu-btn" type="button">
         В корзину
        </button>
       </div>
-      <div class="popular__card popular__card-catalog">
-       <img class="popular__card-image" src="images/menu/royal-cheeseburger.png" alt="#">
-       <h4 class="popular__card-title">
+      <div class="catalog__menu-card">
+       <img class="catalog__menu-image" src="images/menu/royal-cheeseburger.png" alt="#">
+       <h4 class="catalog__menu-title">
         Королевский чизбургер
        </h4>
-       <span class="popular__card-price">
+       <span class="catalog__menu-price">
         260 руб.
        </span>
-       <button class="popular__card-btn" type="button">
+       <button class="catalog__menu-btn" type="button">
         В корзину
        </button>
       </div>
-      <div class="popular__card popular__card-catalog">
-       <img class="popular__card-image" src="images/menu/black-burger.png" alt="#">
-       <h4 class="popular__card-title">
+      <div class="catalog__menu-card">
+       <img class="catalog__menu-image" src="images/menu/black-burger.png" alt="#">
+       <h4 class="catalog__menu-title">
         Черный гамбургер
        </h4>
-       <span class="popular__card-price">
+       <span class="catalog__menu-price">
         199 руб.
        </span>
-       <button class="popular__card-btn" type="button">
+       <button class="catalog__menu-btn" type="button">
         В корзину
        </button>
       </div>
-      <div class="popular__card popular__card-catalog">
-       <img class="popular__card-image" src="images/menu/black-burger.png" alt="#">
-       <h4 class="popular__card-title">
-        Черный гамбургер
+      <div class="catalog__menu-card">
+       <img class="catalog__menu-image" src="images/menu/bifburger.png" alt="#">
+       <h4 class="catalog__menu-title">
+        Бифбургер
        </h4>
-       <span class="popular__card-price">
-        199 руб.
+       <span class="catalog__menu-price">
+        190 руб.
        </span>
-       <button class="popular__card-btn" type="button">
+       <button class="catalog__menu-btn" type="button">
         В корзину
        </button>
       </div>
-      <div class="popular__card popular__card-catalog">
-       <img class="popular__card-image" src="images/menu/black-burger.png" alt="#">
-       <h4 class="popular__card-title">
-        Черный гамбургер
+      <div class="catalog__menu-card">
+       <img class="catalog__menu-image" src="images/menu/chiken-burger.png" alt="#">
+       <h4 class="catalog__menu-title">
+        Чикен бургер
        </h4>
-       <span class="popular__card-price">
-        199 руб.
+       <span class="catalog__menu-price">
+        180 руб.
        </span>
-       <button class="popular__card-btn" type="button">
+       <button class="catalog__menu-btn" type="button">
         В корзину
        </button>
       </div>
@@ -367,7 +370,7 @@
   
 
 
-  <!-- <section class="app">
+  <section class="app">
    <div class="container">
     <div class="app__inner">
      <div class="app__box">
@@ -535,7 +538,7 @@
     </p>
    </div>
   </div>
- </footer> -->
+ </footer>
 
  
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
