--- a/app/cheeseburger-page.html
+++ b/app/cheeseburger-page.html
@@ -13,6 +13,7 @@
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
  <link rel="stylesheet"
  href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css" />
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -87,6 +88,153 @@
      <div class="product__slider-item">
       <img class="product__slider-image" src="images/menu/cheeseburder-slide.jpg" alt="">
      </div>
+     <div class="product__slider-item">
+      <img class="product__slider-image" src="images/menu/cheeseburder-slide.jpg" alt="">
+     </div>
+     <div class="product__slider-item">
+      <img class="product__slider-image" src="images/menu/cheeseburder-slide.jpg" alt="">
+     </div>
+    </div>
+    <div class="product__content">
+     <h3 class="product__title title">
+      Чизбургер с листьями салата
+     </h3>
+     <div class="product__star" data-rateyo-rating="4.5"></div>
+     <span class="product__price">
+      160 руб.
+     </span>
+     <input class="product__field" type="number" value="1">
+     <button class="product__btn">
+      Добавить в корзину
+     </button>
+     <h5 class="product__subtitle">
+      Доставка и оплата
+     </h5>
+     <ul class="product__list">
+      <li class="product__item">
+       Минимальная сумма заказа — 160 руб.
+      </li>
+      <li class="product__item">
+       Время доставки заказа — 80-140 мин.
+      </li>
+      <li class="product__item">
+       Оплата осуществляется только банковской картой.
+      </li>
+      <li class="product__item">
+       Окончательная сумма заказа формируется после сбора товаров.
+      </li>
+     </ul>
+     <a class="product__link" href="#">
+      Подробнее
+     </a>
+    </div>
+   </div>
+   <div class="product-tabs">
+    <div class="product-tabs__top">
+     <a class="product-tabs__link" href="#tab-1">
+      Описание
+     </a>
+     <a class="product-tabs__link" href="#tab-2">
+      Характеристики
+     </a>
+     <a class="product-tabs__link" href="#tab-3">
+      Отзывы (2)
+     </a>
+    </div>
+   </div>
+   <div class="product-tabs__content">
+    <div class="product-tabs__item" id="#tab-1">
+     <p class="product-tabs__text">
+      Рубленый бифштекс из натуральной говядины на карамелизованной булочке, с ломтиком сыра «Чеддер», кетчупом, горчицей, луком и маринованными огурчиками.
+     </p>
+     <p class="product-tabs__text">
+      Аллергены: Глютен, Молоко, Горчица, Может содержать сою, яйцо, следы кунжута.
+     </p>
+     <p class="product-tabs__text">
+      Внешний вид товара может отличаться от изображений, представленных на сайте.
+     </p>
+    </div>
+    <div class="product-tabs__item" id="#tab-2">
+     <p class="product-tabs__text">
+      <span class="product-tabs__descr">Диаметр:</span> 20 см
+     </p>
+     <p class="product-tabs__text">
+      <span class="product-tabs__descr">Вес:</span> 300 гр
+     </p>
+     <p class="product-tabs__text">
+      <span class="product-tabs__descr">Калорийность (на 100г):</span> 295 ккал
+     </p>
+     <p class="product-tabs__text">
+      <span class="product-tabs__descr">Срок хранения:</span> до 3 дней
+     </p>
+    </div>
+    <div class="product-tabs__item" id="#tab-3">
+     <h4 class="product-tabs__comments-title">
+      Мнения наших клиентов
+     </h4>
+     <div class="product-tabs__comments-block">
+      <img class="product-tabs__comments-avatar" src="images/comment-avatar.jpg" alt="#">
+      <div class="product-tabs__comments-box">
+       <div class="product-tabs__commments-info">
+        <p class="product-tabs__commments-name">
+         Андрей
+        </p>
+        <p class="product-tabs__commments-date">
+         10.06.2021
+        </p>
+        <div class="product__star" data-rateyo-rating="5"></div>
+        <p class="product-tabs__comment-text">
+         Доставили быстро. Товар свежий и очень вкусный, буду пробовать еще!))
+        </p>
+       </div>
+      </div>
+     </div>
+     <div class="product-tabs__comments-block">
+      <img class="product-tabs__comments-avatar" src="images/comment-avatar.jpg" alt="#">
+      <div class="product-tabs__comments-box">
+       <div class="product-tabs__commments-info">
+        <p class="product-tabs__commments-name">
+         Екатерина Белая
+        </p>
+        <p class="product-tabs__commments-date">
+         7.06.2021
+        </p>
+        <div class="product__star" data-rateyo-rating="4"></div>
+        <p class="product-tabs__comment-text">
+         этот бургер неплохой чтобы перекусить, когда нет возможности или времени что-нибудь приготовить. Это отличный вариант, чтобы съесть на ходу, но чтобы побаловать себя, я больше предпочту пиццу
+        </p>
+       </div>
+      </div>
+     </div>
+     <form class="product-tabs__comments-form" action="#">
+      <h4 class="">
+       Оставить отзыв
+      </h4>
+      <span class="">
+       Ваша оценка *
+      </span>
+      <div class="product__star" data-rateyo-rating="5"></div>
+      <div class="">
+       <span class="">
+        Ваш отзыв *
+       </span>
+       <textarea class="" placeholder="Введите текст отзыва"></textarea>
+       <div class="">
+        <span class="">
+         Имя
+        </span>
+        <input class="" type="text" placeholder="Введите ваше имя">
+        <span class="">
+         Email *
+        </span>
+        <input class="" type="text" placeholder="youremail@mail.com">
+       </div>
+      </div>
+      <input type="checkbox">
+      <p class="">
+       Сохранить моё имя, email и адрес сайта в этом браузере для последующих моих комментариев.
+      </p>
+     </form>
     </div>
    </div>
   </section>
@@ -215,6 +363,7 @@
  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js" integrity="sha512-WNZwVebQjhSxEzwbettGuQgWxbpYdoLf7mH+25A7sfQbbxKeS5SQ9QBf97zOY4nOlwtksgDA/czSTmfj4DUEiQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
  <script src="js/main.js"></script>
 </body>
 
