--- a/app/cheeseburger-page.html
+++ b/app/cheeseburger-page.html
@@ -82,159 +82,238 @@
    </div>
   </div>
 
-  <section class="product">
-   <div class="product__inner">
-    <div class="product__slider">
-     <div class="product__slider-item">
-      <img class="product__slider-image" src="images/menu/cheeseburder-slide.jpg" alt="">
-     </div>
-     <div class="product__slider-item">
-      <img class="product__slider-image" src="images/menu/cheeseburder-slide.jpg" alt="">
-     </div>
-     <div class="product__slider-item">
-      <img class="product__slider-image" src="images/menu/cheeseburder-slide.jpg" alt="">
-     </div>
-    </div>
-    <div class="product__content">
-     <h3 class="product__title title">
-      Чизбургер с листьями салата
-     </h3>
-     <div class="product__star" data-rateyo-rating="4.5"></div>
-     <span class="product__price">
-      160 руб.
-     </span>
-     <input class="product__field" type="number" value="1">
-     <button class="product__btn">
-      Добавить в корзину
-     </button>
-     <h5 class="product__subtitle">
-      Доставка и оплата
-     </h5>
-     <ul class="product__list">
-      <li class="product__item">
-       Минимальная сумма заказа — 160 руб.
-      </li>
-      <li class="product__item">
-       Время доставки заказа — 80-140 мин.
-      </li>
-      <li class="product__item">
-       Оплата осуществляется только банковской картой.
-      </li>
-      <li class="product__item">
-       Окончательная сумма заказа формируется после сбора товаров.
-      </li>
-     </ul>
-     <a class="product__link" href="#">
-      Подробнее
-     </a>
-    </div>
-   </div>
-   <div class="product-tabs">
-    <div class="product-tabs__top">
-     <a class="product-tabs__link" href="#tab-1">
-      Описание
-     </a>
-     <a class="product-tabs__link" href="#tab-2">
-      Характеристики
-     </a>
-     <a class="product-tabs__link" href="#tab-3">
-      Отзывы (2)
-     </a>
-    </div>
-   </div>
-   <div class="product-tabs__content">
-    <div class="product-tabs__item" id="#tab-1">
-     <p class="product-tabs__text">
-      Рубленый бифштекс из натуральной говядины на карамелизованной булочке, с ломтиком сыра «Чеддер», кетчупом, горчицей, луком и маринованными огурчиками.
-     </p>
-     <p class="product-tabs__text">
-      Аллергены: Глютен, Молоко, Горчица, Может содержать сою, яйцо, следы кунжута.
-     </p>
-     <p class="product-tabs__text">
-      Внешний вид товара может отличаться от изображений, представленных на сайте.
-     </p>
-    </div>
-    <div class="product-tabs__item" id="#tab-2">
-     <p class="product-tabs__text">
-      <span class="product-tabs__descr">Диаметр:</span> 20 см
-     </p>
-     <p class="product-tabs__text">
-      <span class="product-tabs__descr">Вес:</span> 300 гр
-     </p>
-     <p class="product-tabs__text">
-      <span class="product-tabs__descr">Калорийность (на 100г):</span> 295 ккал
-     </p>
-     <p class="product-tabs__text">
-      <span class="product-tabs__descr">Срок хранения:</span> до 3 дней
-     </p>
-    </div>
-    <div class="product-tabs__item" id="#tab-3">
-     <h4 class="product-tabs__comments-title">
-      Мнения наших клиентов
-     </h4>
-     <div class="product-tabs__comments-block">
-      <img class="product-tabs__comments-avatar" src="images/comment-avatar.jpg" alt="#">
-      <div class="product-tabs__comments-box">
-       <div class="product-tabs__commments-info">
-        <p class="product-tabs__commments-name">
-         Андрей
-        </p>
-        <p class="product-tabs__commments-date">
-         10.06.2021
-        </p>
-        <div class="product__star" data-rateyo-rating="5"></div>
-        <p class="product-tabs__comment-text">
-         Доставили быстро. Товар свежий и очень вкусный, буду пробовать еще!))
-        </p>
-       </div>
+  <section class="product"> 
+   <div class="container">
+    <div class="product__inner">
+     <div class="product__slider">
+      <div class="product__slider-item">
+       <img class="product__slider-image" src="images/menu/cheeseburder-slide.jpg" alt="">
+      </div>
+      <div class="product__slider-item">
+       <img class="product__slider-image" src="images/menu/cheeseburder-slide.jpg" alt="">
+      </div>
+      <div class="product__slider-item">
+       <img class="product__slider-image" src="images/menu/cheeseburder-slide.jpg" alt="">
       </div>
      </div>
-     <div class="product-tabs__comments-block">
-      <img class="product-tabs__comments-avatar" src="images/comment-avatar.jpg" alt="#">
-      <div class="product-tabs__comments-box">
-       <div class="product-tabs__commments-info">
-        <p class="product-tabs__commments-name">
-         Екатерина Белая
-        </p>
-        <p class="product-tabs__commments-date">
-         7.06.2021
-        </p>
-        <div class="product__star" data-rateyo-rating="4"></div>
-        <p class="product-tabs__comment-text">
-         этот бургер неплохой чтобы перекусить, когда нет возможности или времени что-нибудь приготовить. Это отличный вариант, чтобы съесть на ходу, но чтобы побаловать себя, я больше предпочту пиццу
-        </p>
-       </div>
-      </div>
-     </div>
-     <form class="product-tabs__comments-form" action="#">
-      <h4 class="">
-       Оставить отзыв
-      </h4>
-      <span class="">
-       Ваша оценка *
+     <div class="product__content">
+      <h3 class="product__title title">
+       Чизбургер с листьями салата
+      </h3>
+      <div class="product__star" data-rateyo-rating="4.5"></div>
+      <span class="product__price">
+       160 руб.
       </span>
-      <div class="product__star" data-rateyo-rating="5"></div>
-      <div class="">
-       <span class="">
-        Ваш отзыв *
-       </span>
-       <textarea class="" placeholder="Введите текст отзыва"></textarea>
-       <div class="">
-        <span class="">
-         Имя
-        </span>
-        <input class="" type="text" placeholder="Введите ваше имя">
-        <span class="">
-         Email *
-        </span>
-        <input class="" type="text" placeholder="youremail@mail.com">
-       </div>
+      <input class="product__field" type="number" value="1">
+      <button class="product__btn">
+       Добавить в корзину
+      </button>
+      <h5 class="product__subtitle">
+       Доставка и оплата
+      </h5>
+      <ul class="product__list">
+       <li class="product__item">
+        Минимальная сумма заказа — 160 руб.
+       </li>
+       <li class="product__item">
+        Время доставки заказа — 80-140 мин.
+       </li>
+       <li class="product__item">
+        Оплата осуществляется только банковской картой.
+       </li>
+       <li class="product__item">
+        Окончательная сумма заказа формируется после сбора товаров.
+       </li>
+      </ul>
+      <a class="product__link" href="#">
+       Подробнее
+      </a>
+     </div>
+    </div>
+    <div class="product-tabs">
+     <div class="product-tabs__top">
+      <a class="product-tabs__link product-tabs__link--active" href="#tab-1">
+       Описание
+      </a>
+      <a class="product-tabs__link" href="#tab-2">
+       Характеристики
+      </a>
+      <a class="product-tabs__link" href="#tab-3">
+       Отзывы (2)
+      </a>
+     </div>
+     <div class="product-tabs__content">
+      <div class="product-tabs__item product-tabs__item--active" id="tab-1">
+       <p class="product-tabs__text">
+        Рубленый бифштекс из натуральной говядины на карамелизованной булочке, с ломтиком сыра «Чеддер», кетчупом, горчицей, луком и маринованными огурчиками.
+       </p>
+       <p class="product-tabs__text">
+        Аллергены: Глютен, Молоко, Горчица, Может содержать сою, яйцо, следы кунжута.
+       </p>
+       <p class="product-tabs__text">
+        Внешний вид товара может отличаться от изображений, представленных на сайте.
+       </p>
       </div>
-      <input type="checkbox">
-      <p class="">
-       Сохранить моё имя, email и адрес сайта в этом браузере для последующих моих комментариев.
-      </p>
-     </form>
+      <div class="product-tabs__item" id="tab-2">
+       <p class="product-tabs__text">
+        <span class="product-tabs__descr">Диаметр:</span> 20 см
+       </p>
+       <p class="product-tabs__text">
+        <span class="product-tabs__descr">Вес:</span> 300 гр
+       </p>
+       <p class="product-tabs__text">
+        <span class="product-tabs__descr">Калорийность (на 100г):</span> 295 ккал
+       </p>
+       <p class="product-tabs__text">
+        <span class="product-tabs__descr">Срок хранения:</span> до 3 дней
+       </p>
+      </div>
+      <div class="product-tabs__item" id="tab-3">
+       <h4 class="product-tabs__comments-title">
+        Мнения наших клиентов
+       </h4>
+       <div class="product-tabs__comments-block">
+        <img class="product-tabs__comments-avatar" src="images/comment-avatar.jpg" alt="#">
+        <div class="product-tabs__comments-box">
+         <div class="product-tabs__commments-info">
+          <p class="product-tabs__commments-name">
+           Андрей
+          </p>
+          <p class="product-tabs__commments-date">
+           10.06.2021
+          </p>
+          <div class="product__star" data-rateyo-rating="5"></div>
+          <p class="product-tabs__comment-text">
+           Доставили быстро. Товар свежий и очень вкусный, буду пробовать еще!))
+          </p>
+         </div>
+        </div>
+       </div>
+       <div class="product-tabs__comments-block">
+        <img class="product-tabs__comments-avatar" src="images/comment-avatar.jpg" alt="#">
+        <div class="product-tabs__comments-box">
+         <div class="product-tabs__commments-info">
+          <p class="product-tabs__commments-name">
+           Екатерина Белая
+          </p>
+          <p class="product-tabs__commments-date">
+           7.06.2021
+          </p>
+          <div class="product__star" data-rateyo-rating="4"></div>
+          <p class="product-tabs__comment-text">
+           этот бургер неплохой чтобы перекусить, когда нет возможности или времени что-нибудь приготовить. Это отличный вариант, чтобы съесть на ходу, но чтобы побаловать себя, я больше предпочту пиццу
+          </p>
+         </div>
+        </div>
+       </div>
+       <form class="product-tabs__comments-form" action="#">
+        <h4 class="">
+         Оставить отзыв
+        </h4>
+        <span class="">
+         Ваша оценка *
+        </span>
+        <div class="product__star" data-rateyo-rating="5"></div>
+        <div class="">
+         <span class="">
+          Ваш отзыв *
+         </span>
+         <textarea class="" placeholder="Введите текст отзыва"></textarea>
+         <div class="">
+          <span class="">
+           Имя
+          </span>
+          <input class="" type="text" placeholder="Введите ваше имя">
+          <span class="">
+           Email *
+          </span>
+          <input class="" type="text" placeholder="youremail@mail.com">
+         </div>
+        </div>
+        <label class="">
+         <input type="checkbox">
+         <p class="">
+          Сохранить моё имя, email и адрес сайта в этом браузере для последующих моих комментариев.
+         </p>
+        </label>
+        <button class="" type="submit">
+         Оставить отзыв
+        </button>
+       </form>
+      </div>
+     </div>
+    </div>
+   </div>
+  </section>
+
+  <section class="recent">
+   <div class="container">
+    <h3 class="recent__title">
+     Вас может заинтересовать
+    </h3>
+    <div class="recent__slider">
+     <div class="recent__slider-box">
+      <div class="recent__slider-card">
+       <img class="recent__slider-image" src="images/menu/royal-cheeseburger.png" alt="#">
+       <h4 class="recent__slider-title">
+        Королевский чизбургер
+       </h4>
+       <span class="recent__slider-price">
+        260 руб.
+       </span>
+       <button class="recent__slider-btn" type="button">
+        В корзину
+       </button>
+      </div>
+      <div class="recent__slider-card">
+       <img class="recent__slider-image" src="images/menu/black-burger.png" alt="#">
+       <h4 class="recent__slider-title">
+        Черный гамбургер
+       </h4>
+       <span class="recent__slider-price">
+        199 руб.
+       </span>
+       <button class="recent__slider-btn" type="button">
+        В корзину
+       </button>
+      </div>
+      <div class="recent__slider-card">
+       <img class="recent__slider-image" src="images/menu/сheeseburger.png" alt="#">
+       <h4 class="recent__slider-title">
+        Чизбургер с листьями салата
+       </h4>
+       <span class="recent__slider-price">
+        160 руб.
+       </span>
+       <button class="recent__slider-btn" type="button">
+        В корзину
+       </button>
+      </div>
+      <div class="recent__slider-card">
+       <img class="recent__slider-image" src="images/menu/bifburger.png" alt="#">
+       <h4 class="recent__slider-title">
+        Бифбургер
+       </h4>
+       <span class="recent__slider-price">
+        190 руб.
+       </span>
+       <button class="recent__slider-btn" type="button">
+        В корзину
+       </button>
+      </div>
+      <div class="recent__slider-card">
+       <img class="recent__slider-image" src="images/menu/chiken-burger.png" alt="#">
+       <h4 class="recent__slider-title">
+        Чикен бургер
+       </h4>
+       <span class="recent__slider-price">
+        180 руб.
+       </span>
+       <button class="recent__slider-btn" type="button">
+        В корзину
+       </button>
+      </div>
+     </div>
     </div>
    </div>
   </section>
@@ -358,7 +437,6 @@
   </div>
  </footer>
 
- 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js" integrity="sha512-WNZwVebQjhSxEzwbettGuQgWxbpYdoLf7mH+25A7sfQbbxKeS5SQ9QBf97zOY4nOlwtksgDA/czSTmfj4DUEiQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -366,5 +444,4 @@
  <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
  <script src="js/main.js"></script>
 </body>
-
 </html>
