--- a/app/cheeseburger-page.html
+++ b/app/cheeseburger-page.html
@@ -10,9 +10,11 @@
  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
  <link rel="manifest" href="site.webmanifest">
  <title>Simplefood</title>
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
+  integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
  <link rel="stylesheet"
- href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css" />
+  href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css" />
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
  <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -75,14 +77,14 @@
      </li>
      <li class="breadcrumbs__item">
       <a class="breadcrumbs__link" href="#">
-       Чизбургер с листьями салата 
+       Чизбургер с листьями салата
       </a>
      </li>
     </ul>
    </div>
   </div>
 
-  <section class="product"> 
+  <section class="product">
    <div class="container">
     <div class="product__inner">
      <div class="product__slider">
@@ -145,7 +147,8 @@
      <div class="product-tabs__content">
       <div class="product-tabs__item product-tabs__item--active" id="tab-1">
        <p class="product-tabs__text">
-        Рубленый бифштекс из натуральной говядины на карамелизованной булочке, с ломтиком сыра «Чеддер», кетчупом, горчицей, луком и маринованными огурчиками.
+        Рубленый бифштекс из натуральной говядины на карамелизованной булочке, с ломтиком сыра «Чеддер», кетчупом,
+        горчицей, луком и маринованными огурчиками.
        </p>
        <p class="product-tabs__text">
         Аллергены: Глютен, Молоко, Горчица, Может содержать сою, яйцо, следы кунжута.
@@ -169,77 +172,98 @@
        </p>
       </div>
       <div class="product-tabs__item" id="tab-3">
-       <h4 class="product-tabs__comments-title">
+       <h4 class="product-comments__title">
         Мнения наших клиентов
        </h4>
-       <div class="product-tabs__comments-block">
-        <img class="product-tabs__comments-avatar" src="images/comment-avatar.jpg" alt="#">
-        <div class="product-tabs__comments-box">
-         <div class="product-tabs__commments-info">
-          <p class="product-tabs__commments-name">
+       <div class="product-comments__block">
+        <div class="product-comments__inner">
+         <img class="product-comments__avatar" src="images/comment-avatar.jpg" alt="#">
+         <div class="product-comments__box">
+          <p class="product-comments__name">
+           Сергей
+          </p>
+          <p class="product-commments__date">
+           19.08.2021
+          </p>
+         </div>
+         <div class="product__star product-comments__star" data-rateyo-rating="5"></div>
+        </div>
+        <p class="product-comments__text">
+         Очень вкусно!!!))))))
+        </p>
+       </div>
+       <div class="product-comments__block">
+        <div class="product-comments__inner">
+         <img class="product-comments__avatar" src="images/comment-avatar.jpg" alt="#">
+         <div class="product-comments__box">
+          <p class="product-comments__name">
            Андрей
           </p>
-          <p class="product-tabs__commments-date">
+          <p class="product-commments__date">
            10.06.2021
           </p>
-          <div class="product__star" data-rateyo-rating="5"></div>
-          <p class="product-tabs__comment-text">
-           Доставили быстро. Товар свежий и очень вкусный, буду пробовать еще!))
-          </p>
          </div>
+         <div class="product__star product-comments__star" data-rateyo-rating="5"></div>
         </div>
+        <p class="product-comments__text">
+         Доставили быстро. Товар свежий и очень вкусный, буду пробовать еще!))
+        </p>
        </div>
-       <div class="product-tabs__comments-block">
-        <img class="product-tabs__comments-avatar" src="images/comment-avatar.jpg" alt="#">
-        <div class="product-tabs__comments-box">
-         <div class="product-tabs__commments-info">
-          <p class="product-tabs__commments-name">
+       <div class="product-comments__block">
+        <div class="product-comments__inner">
+         <img class="product-comments__avatar" src="images/comment-avatar.jpg" alt="#">
+         <div class="product-comments__box">
+          <p class="product-commments__name">
            Екатерина Белая
           </p>
-          <p class="product-tabs__commments-date">
+          <p class="product-commments__date">
            7.06.2021
           </p>
-          <div class="product__star" data-rateyo-rating="4"></div>
-          <p class="product-tabs__comment-text">
-           этот бургер неплохой чтобы перекусить, когда нет возможности или времени что-нибудь приготовить. Это отличный вариант, чтобы съесть на ходу, но чтобы побаловать себя, я больше предпочту пиццу
-          </p>
          </div>
+         <div class="product__star product-comments__star" data-rateyo-rating="4"></div>
         </div>
-       </div>
-       <form class="product-tabs__comments-form" action="#">
-        <h4 class="">
-         Оставить отзыв
-        </h4>
-        <span class="">
-         Ваша оценка *
-        </span>
-        <div class="product__star" data-rateyo-rating="5"></div>
-        <div class="">
-         <span class="">
-          Ваш отзыв *
+        <p class="product-comments__text">
+         Этот бургер неплохой чтобы перекусить, когда нет возможности или времени что-нибудь приготовить. Это отличный
+         вариант, чтобы съесть на ходу, но чтобы побаловать себя, я больше предпочту пиццу
+        </p>
+        </div>
+        <form class="product-comments__form" action="#">
+         <h4 class="product-comments__form-title">
+          Оставить отзыв
+         </h4>
+         <span class="product-comments__form-score">
+          Ваша оценка *
          </span>
-         <textarea class="" placeholder="Введите текст отзыва"></textarea>
-         <div class="">
-          <span class="">
-           Имя
-          </span>
-          <input class="" type="text" placeholder="Введите ваше имя">
-          <span class="">
-           Email *
-          </span>
-          <input class="" type="text" placeholder="youremail@mail.com">
+         <div class="product__star product-comments__form-star" data-rateyo-rating="5"></div>
+         <div class="product-comments__form-inner">
+          <div class="product-comments__form-box">
+           <span class="product-comments__form-review">
+            Ваш отзыв *
+           </span>
+           <textarea class="product-comments__form-textarea" placeholder="Введите текст отзыва"></textarea>
+          </div>          
+          <div class="product-comments__form-fields">
+           <span class="product-comments__form-name">
+            Имя *
+           </span>
+           <input class="product-comments__form-field" type="text" placeholder="Введите ваше имя">
+           <span class="product-comments__form-mail">
+            Email *
+           </span>
+           <input class="product-comments__form-field" type="text" placeholder="youremail@mail.com">
+          </div>
          </div>
-        </div>
-        <label class="">
-         <input type="checkbox">
-         <p class="">
-          Сохранить моё имя, email и адрес сайта в этом браузере для последующих моих комментариев.
-         </p>
-        </label>
-        <button class="" type="submit">
-         Оставить отзыв
-        </button>
-       </form>
+         <label class="product-comments__form-label">
+          <input type="checkbox">
+          <p class="product-comments__form-text">
+           Сохранить моё имя, email и адрес сайта в этом браузере для последующих моих комментариев.
+          </p>
+         </label>
+         <button class="product-comments__form-btn" type="submit">
+          Оставить отзыв
+         </button>
+        </form>
+       </div>
       </div>
      </div>
     </div>
@@ -439,9 +463,12 @@
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js" integrity="sha512-WNZwVebQjhSxEzwbettGuQgWxbpYdoLf7mH+25A7sfQbbxKeS5SQ9QBf97zOY4nOlwtksgDA/czSTmfj4DUEiQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"
+  integrity="sha512-WNZwVebQjhSxEzwbettGuQgWxbpYdoLf7mH+25A7sfQbbxKeS5SQ9QBf97zOY4nOlwtksgDA/czSTmfj4DUEiQ=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
  <script src="js/main.js"></script>
 </body>
+
 </html>
